Addded new endpoint to get mol weight
